examples/fail/semantic/continue_outside_loop.bina
// EXPECT_SEMANTIC_ERROR: continue outside loop
fn main() -> int {
    continue;
    return 0;
}
